Still very much WIP, experimenting and many things are still TODOs. Commit just after removing prosheet reference.