@@ -1,9 +1,11 @@
 plugins {
     id 'java'
+    id 'application'
     id 'org.jetbrains.kotlin.jvm' version '1.3.61'
+    id 'org.openjfx.javafxplugin' version '0.0.8'
 }
 
-group 'com.sigbla.prosheet'
+group 'sigbla.app'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 11
@@ -12,8 +14,14 @@ repositories {
     mavenCentral()
 }
 
+javafx {
+    version = "11.0.2"
+    modules = [ 'javafx.controls', 'javafx.web' ]
+}
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    implementation "no.tornado:tornadofx:1.7.19"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
@@ -24,3 +32,9 @@ compileKotlin {
 compileTestKotlin {
     kotlinOptions.jvmTarget = "11"
 }
+
+run {
+    jvmArgs("--add-opens=javafx.controls/javafx.scene.control=ALL-UNNAMED")
+}
+
+mainClassName = "sigbla.app.Sigbla"
